[package]
name = "darkroom"
version.workspace = true
edition.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints]
workspace = true

[dependencies]
aperture = { workspace = true }
scenarium = { workspace = true, features = ["builtin-fs-watch", "builtin-random"] }
common = { workspace = true }
lens = { workspace = true }
imaginarium = { workspace = true }

# Decodes the baked-in window-icon PNG to RGBA at startup (see `load_icon`
# in `main.rs`). Already in the workspace graph via imaginarium.
image = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

dark-light = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }

# Scripting-over-TCP transport (`src/script/`): a sandboxed Rhai executor
# fed by a length-prefixed, lz4-framed TCP protocol. Off unless `--script-tcp`.
rhai = { workspace = true }
lz4_flex = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["test-support"] }
scenarium = { workspace = true, features = ["internals"] }
static_assertions = { workspace = true }

[features]
# Forward aperture's tracy backend so `cargo run -p darkroom --features
# profile-with-tracy` lights up zones across both crates against a single
# tracy-client connection (aperture centralises the `tracy-client` dep
# so the FFI singleton stays unique).
profile-with-tracy = ["aperture/profile-with-tracy"]

# Embeds `assets/icons/darkroom.ico` into the .exe as a Win32 resource so
# Explorer / taskbar show the app icon. No-op off Windows (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# `cargo bundle --release -p darkroom` reads this to build darkroom.app
# (macOS) / a .deb (Linux). The .icns lands in Contents/Resources and is
# referenced from the generated Info.plist. Regenerate icons with
# assets/icons/generate.sh.
[package.metadata.bundle]
name = "darkroom"
identifier = "com.darkroom.editor"
icon = [
    "assets/icons/darkroom.icns",
    "assets/icons/darkroom-512.png",
    "assets/icons/darkroom-256.png",
    "assets/icons/darkroom-128.png",
]
category = "GraphicsDesign"
short_description = "Node-graph image pipeline editor"
