[package]
name = "scenarium-editor"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { workspace = true }
graph = { workspace = true }
vision = { workspace = true }

wgpu = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
hashbrown = { workspace = true }
bumpalo = { workspace = true }
lz4_flex = { workspace = true }
rfd = { workspace = true }
