[package]
name = "graph"
version = "0.1.1"
edition = "2021"
description = "A graph library for Scenarium"

[dependencies]
common = { workspace = true }

serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
flexi_logger = { workspace = true }
parking_lot = { workspace = true }
hashbrown = { workspace = true }
pollster = { workspace = true }
