[package]
name = "graph"
version = "0.1.1"
edition.workspace = true
description = "A graph library for Scenarium"

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
pollster = { workspace = true }
mlua = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }


[[bench]]
name = "b1"
harness = false
