[package]
name = "imaginarium"
version = "0.1.0"
edition = "2024"


[dependencies]
tiff = { version = "0.11" }
image = { version = "0.25" }
bytemuck = { version = "1.24", features = ["derive"] }
num-traits = { version = "0.2" }
rayon = "1.11"
paste = "1.0"
glam = "0.30"
hashbrown = "0.16"
tracing = "0.1"
wgpu = "28"
pollster = "0.4"
atomic_refcell = "0.1"

[dev-dependencies]
criterion = "0.8"
