[package]
name = "imaginarium"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true

strum.workspace = true
strum_macros.workspace = true
tiff.workspace = true
image.workspace = true
bytemuck.workspace = true
rayon.workspace = true
paste.workspace = true
glam.workspace = true
hashbrown.workspace = true
tracing.workspace = true
wgpu.workspace = true
pollster.workspace = true
atomic_refcell.workspace = true
tokio.workspace = true
aligned-vec.workspace = true
[dev-dependencies]
bench.workspace = true
