[package]
name = "lens"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
scenarium = { workspace = true }
imaginarium = { workspace = true }
lumos = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
