[package]
name = "lens"
version.workspace = true
edition.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[dependencies]
common = { workspace = true }
scenarium = { workspace = true }
imaginarium = { workspace = true }
lumos = { workspace = true, features = ["ml"] }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
