[package]
name = "lens"
version.workspace = true
edition.workspace = true
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints]
workspace = true

[dependencies]
common = { workspace = true, features = ["introspect-derive"] }
scenarium = { workspace = true }
imaginarium = { workspace = true }
lumos = { workspace = true, features = ["ml"] }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
scenarium = { workspace = true, features = ["internals"] }
