[package]
name = "lumos"
version.workspace = true
edition.workspace = true
description = "Astronomical image-processing pipeline: RAW/FITS decode, calibration, star detection, registration, stacking, and drizzle."

[features]
real-data = []
# ML-based filters (star removal, …) via a pure-Rust ONNX backend (tract). Off by default — pulls in
# a heavy inference stack. Models are NOT bundled; the caller supplies their own ONNX weights.
ml = ["dep:tract-onnx"]

[dependencies]
common = { workspace = true }
imaginarium = { workspace = true }

tract-onnx = { workspace = true, optional = true }

fits-well = { workspace = true }
libraw-rs-sys = { workspace = true }

thiserror = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
memmap2 = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
nalgebra = { workspace = true }
arrayvec = { workspace = true }
smallvec = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
common = { workspace = true, features = ["test-support"] }
quickbench = { workspace = true }
image = { workspace = true }
