[package]
name = "prism"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
scenarium = { workspace = true }
imaginarium = { workspace = true }
palantir = { workspace = true }

egui = { workspace = true }
eframe = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rhai = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
tracing-rolling-file = { workspace = true }
tracing-appender = { workspace = true }
hashbrown = { workspace = true }
bumpalo = { workspace = true }
lz4_flex = { workspace = true }
rfd = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
