[package]
name = "scenarium"
version.workspace = true
edition.workspace = true
description = "A graph library for Scenarium"

[dependencies]
common = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
mlua = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
