[package]
name = "scenarium"
version.workspace = true
edition.workspace = true
description = "A graph library for Scenarium"
exclude = ["AGENTS.md", "CLAUDE.md"]

[lints]
workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }

[features]
internals = []

[dev-dependencies]
common = { workspace = true, features = ["internals"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
