[package]
name = "vision"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
graph = { workspace = true }
imaginarium = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
