# Standalone dev tool: its own `[workspace]` detaches it from the Scenarium
# workspace so `cargo build` at the repo root never compiles syn/prettyplease.
[package]
name = "rust-outline"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-outline"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
prettyplease = "0.2"
ignore = "0.4"

[workspace]
